added missing personal info

--- a/shard.yml
+++ b/shard.yml
@@ -2,7 +2,7 @@ name: kv
 version: 0.1.0
 
 authors:
-  - your-name-here <your-email-here>
+  - Roberto Alsina <roberto.alsina@gmail.com>
 
 targets:
   kv:
