--- a/shard.yml
+++ b/shard.yml
@@ -24,3 +24,5 @@ dependencies:
     branch: master
   baked_file_handler:
     github: ralsina/baked_file_handler
+  kemal-basic-auth:
+    github: kemalcr/kemal-basic-auth
