--- a/shard.yml
+++ b/shard.yml
@@ -28,3 +28,5 @@ dependencies:
     github: kemalcr/kemal-basic-auth
   pluto:
     github: phenopolis/pluto
+  turbojpeg:
+    github: zuf/turbojpeg.cr
