--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -7,9 +7,21 @@
     "background_color": "#121214",
     "theme_color": "#121214",
     "icons": [
-        
-        {
-            "src": "/icons/icon-192x192.png",
+        }
+    ],
+    "permissions": [
+        "keyboard",
+        "pointer",
+        "clipboard-read",
+        "clipboard-write",
+        "display-capture",
+        "window-management"
+    ],
+    "optional_permissions": [
+        "hid",
+        "usb",
+        "bluetooth"
+    ]
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any"
@@ -32,5 +44,18 @@
             "type": "image/png",
             "purpose": "maskable"
         }
+    ],
+    "permissions": [
+        "keyboard",
+        "pointer",
+        "clipboard-read",
+        "clipboard-write",
+        "display-capture",
+        "window-management"
+    ],
+    "optional_permissions": [
+        "hid",
+        "usb",
+        "bluetooth"
     ]
 }
