--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -10,4 +10,4 @@ repos:
         entry: /usr/local/bin/ameba --fix src/ spec/
         pass_filenames: false
         language: script
-        stages: [commit]
+        stages: [pre-commit]
