--- a/layouts/us.yaml
+++ b/layouts/us.yaml
@@ -1,31 +1,157 @@
 name: us
 display_name: "us"
 letters:
-  a: "0x16"
-  b: "0x23"
-  c: "0x21"
-  d: "0x18"
-  e: "0x6"
-  f: "0x19"
-  g: "0x1a"
-  h: "0x1b"
-  i: "0xb"
-  j: "0x1c"
-  k: "0x1d"
-  l: "0x1e"
-  m: "0x25"
-  n: "0x24"
-  o: "0xc"
-  p: "0xd"
-  q: "0x4"
-  r: "0x7"
-  s: "0x17"
-  t: "0x8"
-  u: "0xa"
-  v: "0x22"
-  w: "0x5"
-  x: "0x20"
-  y: "0x9"
-  z: "0x1f"
+  a: "0x04"
+  b: "0x05"
+  c: "0x06"
+  d: "0x07"
+  e: "0x08"
+  f: "0x09"
+  g: "0x0a"
+  h: "0x0b"
+  i: "0x0c"
+  j: "0x0d"
+  k: "0x0e"
+  l: "0x0f"
+  m: "0x10"
+  n: "0x11"
+  o: "0x12"
+  p: "0x13"
+  q: "0x14"
+  r: "0x15"
+  s: "0x16"
+  t: "0x17"
+  u: "0x18"
+  v: "0x19"
+  w: "0x1a"
+  x: "0x1b"
+  y: "0x1c"
+  z: "0x1d"
 symbols:
+  1:
+    code: "0x1e"
+    shift: false
+  "!":
+    code: "0x1e"
+    shift: true
+  2:
+    code: "0x1f"
+    shift: false
+  "@":
+    code: "0x1f"
+    shift: true
+  3:
+    code: "0x20"
+    shift: false
+  "#":
+    code: "0x20"
+    shift: true
+  4:
+    code: "0x21"
+    shift: false
+  "$":
+    code: "0x21"
+    shift: true
+  5:
+    code: "0x22"
+    shift: false
+  "%":
+    code: "0x22"
+    shift: true
+  6:
+    code: "0x23"
+    shift: false
+  "^":
+    code: "0x23"
+    shift: true
+  7:
+    code: "0x24"
+    shift: false
+  "&":
+    code: "0x24"
+    shift: true
+  8:
+    code: "0x25"
+    shift: false
+  "*":
+    code: "0x25"
+    shift: true
+  9:
+    code: "0x26"
+    shift: false
+  "(":
+    code: "0x26"
+    shift: true
+  0:
+    code: "0x27"
+    shift: false
+  ")":
+    code: "0x27"
+    shift: true
+  "-":
+    code: "0x2d"
+    shift: false
+  "_":
+    code: "0x2d"
+    shift: true
+  "=":
+    code: "0x2e"
+    shift: false
+  "+":
+    code: "0x2e"
+    shift: true
+  "[":
+    code: "0x2f"
+    shift: false
+  "{":
+    code: "0x2f"
+    shift: true
+  "]":
+    code: "0x30"
+    shift: false
+  "}":
+    code: "0x30"
+    shift: true
+  "\\":
+    code: "0x31"
+    shift: false
+  "|":
+    code: "0x31"
+    shift: true
+  ";":
+    code: "0x33"
+    shift: false
+  ":":
+    code: "0x33"
+    shift: true
+  "'":
+    code: "0x34"
+    shift: false
+  "\"":
+    code: "0x34"
+    shift: true
+  "`":
+    code: "0x35"
+    shift: false
+  "~":
+    code: "0x35"
+    shift: true
+  ",":
+    code: "0x36"
+    shift: false
+  "<":
+    code: "0x36"
+    shift: true
+  ".":
+    code: "0x37"
+    shift: false
+  ">":
+    code: "0x37"
+    shift: true
+  "/":
+    code: "0x38"
+    shift: false
+  "?":
+    code: "0x38"
+    shift: true
 dead_keys: {}
